# chatinterface-server

./: .dockerignore  .gitignore  CHANGES.md  OPEN_SOURCE_LICENSES.md  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: docker-image.yml  tests.yml
app/: dependencies.py  main.py
app/internal/: config.py  constants.py  database.py  ws.py
app/models/: chats.py  common.py  dbtables.py
app/routers/: __init__.py  auth.py  chats.py  frontend.py  users.py  ws.py
chatinterface_server/: __init__.py  dependencies.py  main.py
chatinterface_server/internal/: __init__.py  config.py  constants.py  database.py  ws.py
chatinterface_server/models/: __init__.py  chats.py  common.py  dbtables.py  users.py  ws.py
chatinterface_server/routers/: auth.py  chats.py  frontend.py  users.py  ws.py
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 2cde6b73ab54_remove_userchatrelations.py  dc673a2dfa74_initialize_models.py
static/css/: login_path.css  root_path.css
static/js/: login_path.js  root_path.js
templates/: login_path.html  root_path.html
tests/: conftest.py
tests/routers/: test_auth.py  test_chats.py  test_frontend.py  test_main.py
